MYBEAUTIP-1518 [fix] async 제거